# voice_record_transcriber

./: .gitignore  99-actions-ami-voice-memo.rules  README.md  actions-ami-voice-memo@.service  env.example  install.sh  install_auto_sync.sh  pyproject.toml  voice_memo_sync.py
tests/: test_voice_memo_sync.py
