[project]
name = "voice-record-transcriber"
version = "0.1.0"
description = "Transcribe new voice memo files from an Actions Ami MP4 player into Simplenote using Cohere or Soniox."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "simplenote>=2.1.4",
]

[tool.uv]
package = false
